# HttpVisualizer

./: .gitignore  Cargo.toml  premake5.lua  push.py
Dependencies/Request/: Cargo.toml  cbindgen.toml  makefile
Dependencies/Request/include/: Request.h
Dependencies/Request/src/: lib.rs
Dependencies/curl-7.86.0/Binaries/windows/x64/: libcurl_a.lib
Dependencies/curl-7.86.0/Binaries/windows/x86/: libcurl_a.lib
Dependencies/curl-7.86.0/builds/libcurl-vc22-x64-release-static-ipv6-sspi-schannel/lib/: libcurl_a.lib
Dependencies/curl-7.86.0/winbuild/: CURL_OBJS.inc  LIBCURL_OBJS.inc  vc140.idb
Dependencies/glfw/: premake5.lua
Dependencies/httplib/: httplib.h
Dependencies/raylib/: premake5.lua
Dependencies/raylib/include/: gui_textbox_extended.h  raygui.h
Dependencies/raylib/src/: raylib.h  rcore.c  rmodels.c  rshapes.c  rtext.c  rtextures.c
HttpVisualizer/: premake5.lua
HttpVisualizer/src/: Client.h  RenderWindow.cpp  RenderWindow.h  ResponseBody.h  TextBox.h  UrlInputSection.h  Window.cpp  Window.h  main.cpp
scripts/: build.py
src/: lib.rs  main.rs
